@@ -250,6 +250,102 @@ or no dimensions at all.</p>
 <div class="math notranslate nohighlight">
 \[A^{c}_{x}(i) = \sum_{j}{A^{c}_{x}(j,i)}\]</div>
 </li>
+<li><p class="first">tropospheric column number density column AVK of air component from total column number density column AVK:</p>
+<table border="1" class="docutils">
+<colgroup>
+<col width="15%" />
+<col width="31%" />
+<col width="19%" />
+<col width="35%" />
+</colgroup>
+<thead valign="bottom">
+<tr class="row-odd"><th class="head">symbol</th>
+<th class="head">description</th>
+<th class="head">unit</th>
+<th class="head">variable name</th>
+</tr>
+</thead>
+<tbody valign="top">
+<tr class="row-even"><td><span class="math notranslate nohighlight">\(\tilde{A}^{c}_{x}(i)\)</span></td>
+<td>column AVK of tropospheric part of column number density
+profile of air component x</td>
+<td><span class="math notranslate nohighlight">\(\frac{molec/m^2}{molec/m^2}\)</span></td>
+<td><cite>tropospheric_&lt;species&gt;_column_number_density_avk {:,vertical}</cite></td>
+</tr>
+<tr class="row-odd"><td><span class="math notranslate nohighlight">\(A^{c}_{x}(i)\)</span></td>
+<td>column AVK of column number density profile of
+air component x (e.g. <span class="math notranslate nohighlight">\(A^{c}_{O_{3}}(i)\)</span>)</td>
+<td><span class="math notranslate nohighlight">\(\frac{molec/m^2}{molec/m^2}\)</span></td>
+<td><cite>&lt;species&gt;_column_number_density_avk {:,vertical}</cite></td>
+</tr>
+<tr class="row-even"><td><span class="math notranslate nohighlight">\(z_{TP}\)</span></td>
+<td>tropopause altitude</td>
+<td><span class="math notranslate nohighlight">\(m\)</span></td>
+<td><cite>tropopause_altitude {:}</cite></td>
+</tr>
+<tr class="row-odd"><td><span class="math notranslate nohighlight">\(z^{B}(i,l)\)</span></td>
+<td>altitude boundaries (<span class="math notranslate nohighlight">\(l \in \{1,2\}\)</span>)</td>
+<td><span class="math notranslate nohighlight">\(m\)</span></td>
+<td><cite>altitude_bounds {:,vertical,2}</cite></td>
+</tr>
+</tbody>
+</table>
+<p>The pattern <cite>:</cite> for the first dimensions can represent <cite>{latitude,longitude}</cite>, <cite>{time}</cite>, <cite>{time,latitude,longitude}</cite>,
+or no dimensions at all.</p>
+<div class="math notranslate nohighlight">
+\[\begin{split}A^{c}_{x}(i) = \begin{cases}
+  z^{B}(i,2) \leq z_{TP}, &amp; A^{c}_{x}(i) \\
+  z^{B}(j,2) &gt; z_{TP}, &amp; 0
+\end{cases}\end{split}\]</div>
+</li>
+<li><p class="first">stratospheric column number density column AVK of air component from total column number density column AVK:</p>
+<table border="1" class="docutils">
+<colgroup>
+<col width="15%" />
+<col width="31%" />
+<col width="19%" />
+<col width="34%" />
+</colgroup>
+<thead valign="bottom">
+<tr class="row-odd"><th class="head">symbol</th>
+<th class="head">description</th>
+<th class="head">unit</th>
+<th class="head">variable name</th>
+</tr>
+</thead>
+<tbody valign="top">
+<tr class="row-even"><td><span class="math notranslate nohighlight">\(\tilde{A}^{c}_{x}(i)\)</span></td>
+<td>column AVK of stratospheric part of column number density
+profile of air component x</td>
+<td><span class="math notranslate nohighlight">\(\frac{molec/m^2}{molec/m^2}\)</span></td>
+<td><cite>tropospheric_&lt;species&gt;_column_number_density_avk {:,vertical}</cite></td>
+</tr>
+<tr class="row-odd"><td><span class="math notranslate nohighlight">\(A^{c}_{x}(i)\)</span></td>
+<td>column AVK of column number density profile of
+air component x (e.g. <span class="math notranslate nohighlight">\(A^{c}_{O_{3}}(i)\)</span>)</td>
+<td><span class="math notranslate nohighlight">\(\frac{molec/m^2}{molec/m^2}\)</span></td>
+<td><cite>&lt;species&gt;_column_number_density_avk {:,vertical}</cite></td>
+</tr>
+<tr class="row-even"><td><span class="math notranslate nohighlight">\(z_{TP}\)</span></td>
+<td>tropopause altitude</td>
+<td><span class="math notranslate nohighlight">\(m\)</span></td>
+<td><cite>tropopause_altitude {:}</cite></td>
+</tr>
+<tr class="row-odd"><td><span class="math notranslate nohighlight">\(z^{B}(i,l)\)</span></td>
+<td>altitude boundaries (<span class="math notranslate nohighlight">\(l \in \{1,2\}\)</span>)</td>
+<td><span class="math notranslate nohighlight">\(m\)</span></td>
+<td><cite>altitude_bounds {:,vertical,2}</cite></td>
+</tr>
+</tbody>
+</table>
+<p>The pattern <cite>:</cite> for the first dimensions can represent <cite>{latitude,longitude}</cite>, <cite>{time}</cite>, <cite>{time,latitude,longitude}</cite>,
+or no dimensions at all.</p>
+<div class="math notranslate nohighlight">
+\[\begin{split}A^{c}_{x}(i) = \begin{cases}
+  z^{B}(i,2) \leq z_{TP}, &amp; 0 \\
+  z^{B}(j,2) &gt; z_{TP}, &amp; A^{c}_{x}(i)
+\end{cases}\end{split}\]</div>
+</li>
 <li><p class="first">column number density AVK of air component from number density AVK:</p>
 <table border="1" class="docutils">
 <colgroup>
@@ -290,7 +386,7 @@ or no dimensions at all.</p>
 <div class="math notranslate nohighlight">
 \[\begin{split}A^{c}_{x}(i,j) = \begin{cases}
   z^{B}(j,1) \neq z^{B}(j,2), &amp; A^{n}_{x}(i,j) \frac{\lvert z^{B}(i,2) - z^{B}(i,1) \rvert}{\lvert z^{B}(j,2) - z^{B}(j,1) \rvert} \\
-  z^{B}(j,1) \neq z^{B}(j,2), &amp; 0
+  z^{B}(j,1) = z^{B}(j,2), &amp; 0
 \end{cases}\end{split}\]</div>
 </li>
 </ol>
